# kctrl_service

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/idlike/kctrl/service/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/idlike/kctrl/service/: IUserService.aidl
app/src/main/cpp/: CMakeLists.txt  service.cpp
app/src/main/java/com/idlike/kctrl/service/: AboutFragment.kt  AutoStartActivity.kt  CroppedVideoView.kt  DaemonService.java  MainActivity.kt  StatusFragment.kt  ViewPagerAdapter.kt  WakeLockManager.java  WakeLockReceiver.java  boot_shizuku.java  libkctrlexec.kt
app/src/main/jniLibs/arm64-v8a/: service
app/src/main/jniLibs/x86/: service
app/src/main/jniLibs/x86_64/: service
app/src/main/res/anim/: dialog_enter.xml  dialog_exit.xml  fade_scale_in.xml  slide_in_bottom.xml  slide_out_bottom.xml
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: bg_textview.xml
app/src/main/res/layout/: activity_auto_start.xml  activity_main.xml  fragment_about.xml  fragment_status.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/idlike/kctrl/service/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
